--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "chromedriver": "^89.0.0",
@@ -45,6 +46,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "husky": "^4.3.8",
+    "less": "^4.1.1",
+    "less-loader": "7.3.0",
     "lint-staged": "^10.5.4",
     "nightwatch": "^1.5.1",
     "prettier": "^2.2.1",
