--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "ant-design-vue": "^1.7.4",
+    "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-i18n": "^8.24.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
