--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "build:report": "cross-env NUXT_ENV=analyze nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
@@ -28,6 +29,7 @@
     "ant-design-vue": "^1.7.4",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^3.9.1",
+    "cross-env": "^7.0.3",
     "nuxt": "^2.15.3",
     "vue-i18n": "^8.24.2"
   },
